# new-api

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.fr.md  README.ja.md  README.md  README.zh_CN.md  README.zh_TW.md  docker-compose-port3001.yml  docker-compose.yml  go.mod  go.sum  main.go  makefile
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
common/: api_type.go  build_info.go  constants.go  embed-file-system.go  embed-file-system_test.go  endpoint_type.go  gin.go  init.go  init_test.go  json.go  log_preview.go  log_preview_test.go  maintenance_schedule.go  maintenance_schedule_test.go  model.go  payload_audit.go  payload_audit_test.go  str.go
constant/: README.md  api_type.go  channel.go  context_key.go
controller/: bind_session_test.go  channel-billing.go  channel-test.go  channel.go  channel_copy_test.go  channel_header_profile_test.go  channel_header_profile_validation.go  channel_sort_test.go  channel_tag_policy.go  channel_tag_policy_test.go  channel_test_internal_test.go  channel_test_runtime_config.go  channel_test_runtime_summary.go  channel_upstream_update.go  gift_code.go  (+60 more)
desktop/tauri-app/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
desktop/tauri-app/src-tauri/assets/: service_management.html
desktop/tauri-app/src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs  native_i18n.rs  runtime.rs  runtime_support.rs  service_management.rs  state.rs  window_bounds.rs  windowing.rs
desktop/tauri-app/src-tauri/tests/: runtime_support.rs  window_bounds.rs
(+956 files in other folders)
